# il-ass2

./: README  README.md  comp.hs  info.txt  secd.cabal
src/SECD/: AST.hs  Compile.hs  Examples.hs  Execute.hs  Table.hs
