name:                secd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/randrade23/secd#readme
license:             BSD3
license-file:        LICENSE
author:              Rui Andrade
maintainer:          up201304902@fc.up.pt
copyright:           2017 Rui Andrade
category:            Compilation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SECD.AST,
                       SECD.Compile,
                       SECD.Execute,
                       SECD.Table
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable secd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , secd
  default-language:    Haskell2010

test-suite secd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , secd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/randrade23/secd
